--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,3 +19,7 @@
 .panda-bg-info{
     background-color: #FF136F;
 }
+/* javascript color */
+.background-color{
+    background-color: #FF136F !important;
+}
